package factorypattern;
public interface Vehicle {
    public void produce();
    public void calculateCost(String Option);
}