@startuml

title Factory Pattern
left to right direction

interface Vehicle{
+void produce()
+void calculateCost(String Option)

class VehicleFactory{
+Vehicle getVehicle(String vehicleType)
}
class FactoryPattern_Main{
VehicleFactory vehicleFactory
Vehicle vehicle1
Vehicle vehicle2
Vehicle vehicle3
}

Car ..|> Vehicle
Plane ..|> Vehicle
Ship ..|> Vehicle

VehicleFactory --> Vehicle
FactoryPattern_Main ..> VehicleFactory : <<use>>

@enduml